# nickel-cbuild

./: .gitignore  README.md  pyproject.toml  shell.nix
cbuild/: __main__.py  builder.py  cli.py  recipe.py  store.py
cbuild/cli/: build.py  cli.py  init.py
examples/hello/: README.md  cbuild.ncl
nickel/lib/: recipe.ncl
