[tool.poetry]
name = "nickel-cbuild"
version = "0.1.0"
description = "Nickel to write container-based builds"
authors = ["Guillaume Desforges <guillaume.desforges.pro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [ {include = "cbuild" }]

scripts = { cbuild = "cbuild.cli:cli" }
[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.367"
ruff = "^0.4.9"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
